Release Notes
=============

This document collects changes on a release to release base. For open known issues, please refer to
the bug database on sourceforge. 


Version 0.75
------------

This version addresses the following issues:

949644 - Texture functions fail in mustpass.c
949642 - Scissor test not implemented for code generator
864080 - PolygonOffset is not implemented
944663 - Does not handle the case Z=0 properly
937516 - Context::TexEnv target should be checked against GL_TEXTURE_ 
937517 - bug in Light::AccumulateLight 
937524 - EGL_Power should read switch (exponen >> EGL_PRECISION) 
937676 - the material's backward facing color is not implemented  
944269 - clear depth is not transformed 
944267 - glOrtho matrix incorrect 
944265 - Color to RGBA conversion swaps channels 
943505 - glReadPixels incomplete
942837 - Texture modulation does not work
935473 - Add support for (Strong)ARM 
921582 - Code generation does not support blending 
921581 - Code generation does not support logic ops 
938594 - glClearColorx "red" and "blue" seems to be swapped 


Version 0.70a
-------------

This version incorporates critical fixes for 0.7:

930264 - Texture loading raises an exception 
930207 - enums incorrectly mapped to fixed 
929529 - instruction selection raises exception 
929528 - assertion raised in instruction selection 
929526 - assertion failed after function cleanup 
928068 - EGL coverage test fails 
928046 - GL coverage test fails 
923737 - glBindTexture can fail 
863660 - Provide support for meshes (experimental)


Version 0.7
-----------

This version is a major upgrade from version 0.2. Most notably, it provides a first version of the
runtime compiler infrastructure that generates rasterization code on the fly based on the current
settings.

In addition, the following issues are addressed:

864042 - Automatic Mipmap Generation
863653 - Specialized rasterization functions (replace by runtime compiler)
921405 - Clipping Broken


Version 0.2